refactor: 불변 클래스 -> 레코드로 변경